sql/item.h
@@ -470,6 +470,13 @@ public:
   my_string name;			/* Name from select */
   /* Original item name (if it was renamed)*/
   my_string orig_name;
+  /**
+     Intrusive list pointer for free list. If not null, points to the next
+     Item on some Query_arena's free list. For instance, stored procedures
+     have their own Query_arena's.
+     
+     @see Query_arena::free_list
+  */
   Item *next;
   uint32 max_length;
   uint name_length;                     /* Length of name */
